--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -248,7 +248,7 @@
 	<message key="schedConf.cfp">Call for Papers</message>
 	<message key="schedConf.discussion">Discussion</message>
 	<message key="schedConf.registration">Registration</message>
-	<message key="schedConf.accommodation">Accommodation</message>
+	<message key="schedConf.accommodation">Venue</message>
 	<message key="schedConf.supporters">Organizers and Partners</message>
 	<message key="schedConf.timeline">Timeline</message>
 	<message key="schedConf.schedule">Conference Schedule</message>
@@ -264,7 +264,7 @@
 	<message key="schedConf.presentations.title">Presentations and Authors</message>
 	<message key="schedConf.schedule.title">Schedule</message>
 	<message key="schedConf.program.title">Program</message>
-	<message key="schedConf.accommodation.title">Accommodation</message>
+	<message key="schedConf.accommodation.title">Venue</message>
 	<message key="schedConf.trackPolicies.title">Track Policies</message>
 
 	<!-- Reader interface for scheduler -->
