Navigation name changes

--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -251,7 +251,7 @@
 	<message key="schedConf.accommodation">Venue</message>
 	<message key="schedConf.supporters">Organizers and Partners</message>
 	<message key="schedConf.timeline">Timeline</message>
-	<message key="schedConf.schedule">Conference Schedule</message>
+	<message key="schedConf.schedule">Schedule</message>
 	<message key="schedConf.links">Related Links</message>
 	<message key="schedConf.presentations">Presentations and Authors</message>
 	<message key="schedConf.presentations.short">Presentations</message>
