Fixed bug in localization xml file

--- a/plugins/generic/listOfAttendees/locale/en_US/locale.xml
+++ b/plugins/generic/listOfAttendees/locale/en_US/locale.xml
@@ -4,7 +4,7 @@
 <!--
   * locale.xml
   *
-  * Copyright (c) 2013 Péter Fankhauser
+  * Copyright (c) 2013 Peter Fankhauser
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the en_US (U.S. English) locale.
@@ -16,5 +16,4 @@
 	<message key="plugins.generic.listOfAttendees.description">This plugin allows to show a list of attendees of a conference.</message>
 	<message key="plugins.generic.listOfAttendees.disabled">The List of Attendees Plugin has been disabled.</message>
 	<message key="plugins.generic.listOfAttendees.enabled">The List of Attendees Plugin has been enabled.</message>
-	<message key="plugins.generic.listOfAttendees.settings">Settings</message>
 </locale>
