--- a/locale/en_US/manager.xml
+++ b/locale/en_US/manager.xml
@@ -161,7 +161,7 @@
 	<message key="manager.registration.form.domainInstructions">Enter a domain if the registration type is for institutions. If a domain is entered here, the IP range is optional. Valid values are domain names (e.g. lib.sfu.ca).</message>
 	<message key="manager.registration.form.domainIPRangeRequired">The selected registration type requires a domain and/or an IP range for registration authentication.</message>
 	<message key="manager.registration.form.domainValid">Please enter a valid domain.</message>
-	<message key="manager.registration.form.feeCodeValid">Please double-check the fee code and try again.</message>
+	<message key="manager.registration.form.feeCodeValid">Please double-check the registration code and try again.</message>
 	<message key="manager.registration.form.ipRange">IP range</message>
 	<message key="manager.registration.form.ipRangeInstructions">Enter an IP range if the registration type is for institutions. If an IP range is entered here, the domain is optional. Valid values include an IP (e.g. 142.58.103.1), a CIDR IP range (e.g. 142.58.100.0/24), an IP range (e.g. 142.58.103.1 - 142.58.103.4), an IP range with '*' (e.g. 142.58.103.*), or any combination of these separated by a ';' (e.g. 142.58.103.* - 142.58.107.* ; 142.58.108.1/24 ; 142.58.106.*)</message>
 	<message key="manager.registration.form.ipRangeValid">Please enter a valid IP range.</message>
